--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
 						</div>
 						<div class="desc_wrapper">
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-								consequat.
+								consequat."
 							</p>
 						</div>
 						<div class="name_wrapper">
@@ -257,10 +257,10 @@
 						</div>
 						<div class="desc_wrapper">
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-								consequat.
+								consequat."
 							</p>
 						</div>
 						<div class="name_wrapper">
